--- a/css/Footer.module.css
+++ b/css/Footer.module.css
@@ -38,7 +38,6 @@
   font-size: 32px;
   color: rgb(185, 185, 185);
   text-align: center;
-  width: 100%;
 }
 
 .copyrightBar {
@@ -46,7 +45,9 @@
   box-sizing: border-box;
   max-width: 1240px;
   padding: 10px 0;
-  display: inline;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .policies {
@@ -57,6 +58,8 @@
   font-size: 10px;
 }
 
-.policies:not(:last-child) {
+.policies > *:not(:last-child) {
   border-right: 1px solid gray;
+  padding-right: 10px;
+  margin-right: 10px;
 }
