--- a/css/Navbar.module.css
+++ b/css/Navbar.module.css
@@ -27,8 +27,11 @@
   font-family: 'Anton', sans-serif;
   font-size: 32px;
   color: rgb(185, 185, 185);
-  text-align: center;
-  width: 100%;
+  position: absolute;
+  top: 45px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* z-index: 5; */
 }
 
 .subscribeBtn {
