--- a/css/Popular.module.css
+++ b/css/Popular.module.css
@@ -5,6 +5,10 @@
   padding-top: 40px;
 }
 
+.article {
+  padding: 20px 0;
+}
+
 .header {
   font-family: 'Raleway', sans-serif;
   font-weight: 300;
@@ -12,4 +16,9 @@
   text-transform: uppercase;
   padding-bottom: 15px;
   border-bottom-color: rgb(51, 51, 51);
+}
+
+.img {
+  max-width: 302px;
+  width: 22.4vw;
 }
