--- a/css/Popular.module.css
+++ b/css/Popular.module.css
@@ -16,6 +16,7 @@
   text-transform: uppercase;
   padding-bottom: 15px;
   border-bottom-color: rgb(51, 51, 51);
+  margin-bottom: 15px;
 }
 
 .img {
