--- a/css/Popular.module.css
+++ b/css/Popular.module.css
@@ -5,21 +5,43 @@
   padding-top: 40px;
 }
 
-.article {
-  padding: 20px 0;
-}
-
 .header {
   font-family: 'Raleway', sans-serif;
   font-weight: 300;
-  font-size: 36px;
+  font-size: 48px;
   text-transform: uppercase;
-  padding-bottom: 15px;
+  padding-bottom: 20px;
   border-bottom-color: rgb(51, 51, 51);
-  margin-bottom: 15px;
+}
+
+.articlesAdvertContainer {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-gap: 30px;
+}
+
+.article {
+  display: flex;
+  padding-bottom: 25px;
+  border-bottom: 1px solid var(--lightGray);
+  margin-bottom: 25px;
+}
+
+.article:first-child {
+  padding-top: 20px;
 }
 
 .img {
-  max-width: 302px;
-  width: 22.4vw;
+  max-width: 270px;
+  width: 200px;
+  height: 120px;
+  margin-right: 20px;
+  object-fit: cover;
+}
+
+.ad {
+  background-color: rgb(224, 224, 224);
+  text-align: center;
+  padding-top: 30px;
+  margin-top: 30px;
 }
