--- a/css/Navbar.module.css
+++ b/css/Navbar.module.css
@@ -31,7 +31,11 @@
   top: 45px;
   left: 50%;
   transform: translate(-50%, -50%);
-  /* z-index: 5; */
+  transition: all 0.5s ease;
+}
+
+.logo:hover {
+  font-size: 50px;
 }
 
 .subscribeBtn {
