--- a/css/ArticlesByType.module.css
+++ b/css/ArticlesByType.module.css
@@ -2,7 +2,8 @@
   margin: 0 auto;
   box-sizing: border-box;
   max-width: 960px;
-  padding-top: 100px;
+  margin-top: 120px;
+  margin-bottom: 120px;
 }
 
 .header {
@@ -18,7 +19,6 @@
   display: grid;
   grid-template-columns: 2fr 1fr;
   grid-gap: 30px;
-  margin-bottom: 100px;
 }
 
 .article {
