--- a/css/Navbar.module.css
+++ b/css/Navbar.module.css
@@ -6,20 +6,34 @@
 .navbar {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin: 0 auto;
   padding: 20px 0;
   height: 50px;
   max-width: 1240px;
+  font-size: 14px;
 }
 
-.navbar > a {
-  color: rgb(77, 77, 77);
+.btn {
+  border: 1px solid rgba(255, 255, 255, 0);
+  padding: 8px 10px;
+  border-radius: 2px;
+}
+
+.btn:hover {
+  border: 1px solid rgba(255, 255, 255, 1);
+  cursor: pointer;
+}
+
+.btn:active {
+  border: 1px solid rgb(255, 248, 187);
+  color: rgb(255, 248, 187);
 }
 
 .navbarLinks {
   display: flex;
+  align-items: center;
   align-self: center;
-  font-size: 14px;
   color: white;
 }
 
@@ -40,10 +54,4 @@
 
 .logo:hover {
   color: rgb(231, 231, 231);
-}
-
-.subscribeBtn {
-  display: flex;
-  align-self: center;
-  font-size: 14px;
 }
