--- a/css/ArticlesByType.module.css
+++ b/css/ArticlesByType.module.css
@@ -2,7 +2,7 @@
   margin: 0 auto;
   box-sizing: border-box;
   max-width: 960px;
-  margin-top: 120px;
+  padding-top: 190px;
   margin-bottom: 120px;
 }
 
