--- a/css/Navbar.module.css
+++ b/css/Navbar.module.css
@@ -1,6 +1,6 @@
 /* Navbar styling */
 .navbarWrapper {
-  background-color: rgb(77, 77, 77);
+  background-color: var(--primaryColor);
   position: fixed;
   width: 100%;
 }
