--- a/css/Menu.module.css
+++ b/css/Menu.module.css
@@ -2,5 +2,13 @@
   background-image: linear-gradient(var(--primaryColor), rgb(99, 99, 99));
   position: fixed;
   top: 90px;
+  max-width: 1240px;
+  margin: 0 auto;
   width: 100%;
+  padding-left: 25px;
+}
+
+.category {
+  color: white;
+  font-size: 14px;
 }
