--- a/css/Menu.module.css
+++ b/css/Menu.module.css
@@ -2,10 +2,14 @@
   background-image: linear-gradient(var(--primaryColor), rgb(99, 99, 99));
   position: fixed;
   top: 90px;
+  width: 100%;
+  padding-left: 11px;
+}
+
+.menu {
   max-width: 1240px;
   margin: 0 auto;
-  width: 100%;
-  padding-left: 25px;
+  margin-bottom: 20px;
 }
 
 .category {
