Added buttons to the menu

--- a/css/Menu.module.css
+++ b/css/Menu.module.css
@@ -12,6 +12,12 @@
   margin-bottom: 20px;
 }
 
+.categories {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 25%;
+}
+
 .category {
   color: white;
   font-size: 14px;
