--- a/index.css
+++ b/index.css
@@ -87,3 +87,20 @@ h4 {
   padding-right: 15px;
   margin-right: 15px;
 }
+
+/* Button styling */
+.btn {
+  border: 1px solid rgba(255, 255, 255, 0);
+  padding: 8px 10px;
+  border-radius: 2px;
+}
+
+.btn:hover {
+  border: 1px solid rgba(255, 255, 255, 1);
+  cursor: pointer;
+}
+
+.btn:active {
+  border: 1px solid rgba(255, 255, 255, 0.7);
+  color: rgba(255, 255, 255, 0.7);
+}
