--- a/index.css
+++ b/index.css
@@ -104,3 +104,13 @@ h4 {
   border: 1px solid rgba(255, 255, 255, 0.7);
   color: rgba(255, 255, 255, 0.7);
 }
+
+/* Icon button styling */
+.icon-btn {
+  display: flex;
+  align-self: center;
+}
+
+.icon-btn:hover {
+  cursor: pointer;
+}
