--- a/css/Menu.module.css
+++ b/css/Menu.module.css
@@ -10,12 +10,17 @@
   margin: 0 auto;
   margin-bottom: 20px;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menu > * {
+  width: 30%;
 }
 
 .categories {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  width: 25%;
   justify-items: left;
   align-items: center;
 }
@@ -27,4 +32,18 @@
 .category {
   color: white;
   font-size: 14px;
+}
+
+.dictionary {
+  color: white;
+  text-transform: uppercase;
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+}
+
+.randomWordBtn {
+  border: 1px solid rgba(255, 255, 255, 1);
+  padding: 8px 10px;
+  border-radius: 2px;
 }
